[metadata]
name = physalia
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Test suite for energy consumption
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=2.6
classifier = 
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
 
[files]
packages =
    physalia

[flake8]
filename = *.py
ignore = E101,E241