[metadata]
name = physalia
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Test suite for energy consumption
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=2.7
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Benchmark
[files]
packages =
    physalia

[entry_points]
console_scripts =
    physalia = physalia.cli:tool

[flake8]
filename = ./physalia/**.py
exclude = physalia/third_party/*.py
ignore = E101,E241

[pydocstyle]
match = (?!test_)(?!__init_).*\.py
match-dir = (?!third_party)[^\.].*

[coverage:run]
omit = ./physalia/third_party/*.py
